--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "nativewind": "^4.1.20",
+    "nativewind": "4.1.21",
     "react": "18.0.0",
     "react-native": "0.69.12",
     "react-native-reanimated": "3.11.0",
